# squeezelite-esp32

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Dockerfile  README.md  ToggleGitTracking.ps1  buildFirmware.sh  file-size.txt  file_size.txt  local_build.py  local_build.sh  local_builds.bat  merge_output.bat  sdkconfig  sdkconfig.defaults  sdkconfig_compare.js  squeezelite.cmake  version.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: BuildTest.yml  CrossBuild.yml  Platform_build.yml  codeql-analysis.yml  esp-idf-v4.3-build.yml  web_deploy.yml
build-scripts/: I2S-4MFlash-S3-sdkconfig.defaults  I2S-4MFlash-sdkconfig.defaults  Muse-sdkconfig.defaults  PureS3-sdkconfig.defaults  SqueezeAmp-sdkconfig.defaults  TAudio-sdkconfig.defaults  tembed-sdconfig.defaults  tembed=sdconfig.defaults
components/_override/: CMakeLists.txt  i2s.c  i2s_hal.c  spi_bus_lock.c  spi_master.c
components/_override/esp32/: i2s.c  spi_master.c  spi_master.c.debug
components/adc/: CMakeLists.txt  adc_sink.c  adc_sink.h  input_i2s.c  input_i2s.h
components/codecs/: CMakeLists.txt
components/display/: CMakeLists.txt  ILI9341.c  SH1106.c  SH1122.c  SSD1306.c  SSD1322.c  SSD132x.c  SSD1351.c  ST77xx.c  display.c  display.h
components/display/core/: gds.c  gds.h  gds_default_if.h  gds_draw.c  gds_font.c  gds_image.c  gds_private.h  gds_text.c
components/display/core/ifaces/: default_if_i80.c  default_if_spi.c
components/driver_bt/: CMakeLists.txt  bt_app_core.c  bt_app_sink.c  bt_app_source.c
components/esp_http_server/: CMakeLists.txt
components/heap/: heap_tlsf.c  multi_heap.c
components/led_strip/: CMakeLists.txt  led_strip.c  led_strip.h  led_vu.c  led_vu.h
components/metrics/: Batch.cpp  Batch.h  (+7 more)
components/platform_console/: CMakeLists.txt  cmd_config.c  cmd_i2ctools.c  cmd_i2ctools.h  cmd_nvs.c  cmd_ota.c  cmd_system.c  cmd_system.h  cmd_wifi.c  platform_console.c  platform_console.h  presets.json
components/platform_console/app_recovery/: CMakeLists.txt  recovery.c
components/platform_console/app_squeezelite/: CMakeLists.txt  cmd_squeezelite.c
components/raop/: CMakeLists.txt  dmap_parser.c  raop.c  raop.h  raop_sink.c  raop_sink.h  rtp.c  util.c  util.h
components/spotify/: CMakeLists.txt  Shim.cpp  Shim.h  cspot_private.h  cspot_sink.c  cspot_sink.h  linker.lf
components/spotify/cspot/: CMakeLists.txt
components/spotify/cspot/bell/: CMakeLists.txt
components/spotify/cspot/bell/include/: BellUtils.h  ByteStream.h  Task.h
components/spotify/cspot/bell/libhelix-mp3/: assembly.h  mp3dec.h
components/spotify/cspot/bell/main/io/: URLParser.cpp
components/spotify/cspot/bell/main/io/include/: HTTPClient.h
components/spotify/cspot/bell/main/platform/apple/: MDNSService.cpp
components/spotify/cspot/bell/main/platform/esp/: MDNSService.cpp
components/spotify/cspot/bell/main/utilities/include/: BellUtils.h
components/spotify/cspot/bell/nanopb/extra/: FindNanopb.cmake
components/spotify/cspot/bell/nanopb/generator/: nanopb_generator.py  protoc  protoc-gen-nanopb
components/spotify/cspot/bell/nanopb/generator/proto/: __init__.py
components/spotify/cspot/bell/src/: BaseHTTPServer.cpp0  Crypto.cpp  HTTPServer.cpp
components/spotify/cspot/bell/tremor/: Version_script.in
components/spotify/cspot/protobuf/: authentication.pb.c  authentication.pb.h  authentication.proto  keyexchange.pb.c  keyexchange.pb.h  keyexchange.proto  mercury.pb.c  mercury.pb.h  mercury.proto  metadata.pb.c  metadata.pb.h  spirc.pb.c  spirc.pb.h  spirc.proto
components/spotify/cspot/protos/: ReflectTypeInfo.cpp  ReflectionInternal.h  authentication.h  keyexchange.h  mercury.h  metadata.h  protobuf.h  spirc.h
components/spotify/cspot/src/: AudioChunkManager.cpp  CDNTrackStream.cpp  LoginBlob.cpp  MercuryManager.cpp  PlainConnection.cpp  Player.cpp  SpircController.cpp  TrackReference.cpp
components/squeezelite/: CMakeLists.txt  adac.h  adac_core.c  arrow.data  controls.c  decode.c  decode_external.c  displayer.c  embedded.c  embedded.h  equalizer.c  equalizer.h  flac.c  main.c  opus.c  output.c  output_bt.c  output_embedded.c  output_i2s.c  slimproto.c  slimproto.h  squeezelite.h  stream.c  utils.c  vorbis.c  vu_s.data
components/squeezelite/ac101/: ac101.c
components/squeezelite/cs4265/: cs4265.c
components/squeezelite/tas57xx/: dac_5713.c  dac_57xx.c
components/squeezelite/wm8978/: wm8978.c
components/targets/: CMakeLists.txt  init.c  targets.c  targets.h
components/targets/muse/: muse.c
components/tools/: CMakeLists.txt  platform_esp32.h  tools.c  tools.h  trace.c  trace.h
components/wifi-manager/: CMakeLists.txt  Kconfig.projbuild  _esp_httpd_main.c  dns_server.c  dns_server.h  http_server_handlers.c  http_server_handlers.h  network_driver_DM9051.c  network_driver_LAN8720.c  network_driver_W5500.c  network_ethernet.c  network_ethernet.h  network_manager.c  network_manager.h  network_manager_handlers.c  network_services.h  network_status.c  network_status.h  network_wifi.c  network_wifi.h  state_machine.cpp  state_machine.h  wifi_manager.c  wifi_manager.h  wifi_manager_http_server.c
components/wifi-manager/webapp/: .babelrc  .eslintcache  package.json  package_old.json  tsconfig.json  webapp.cmake  webpack.c  webpack.config.js  webpack.h
components/wifi-manager/webapp/mock/: ap.json  commands.json  config.json  messages.json  status.json  statusdefinition.json
components/wifi-manager/webapp/src/: index.ejs  index.ts  test.ejs  test.ts
components/wifi-manager/webapp/src/js/: custom.js  test.js
components/wifi-manager/webapp/src/sass/: main.scss
components/wifi-manager/webapp/src/sass/utils/: _style.css  _variables.scss
components/wifi-manager/webapp/webpack/: BuildEventsHook.js  webpack.dev.js  webpack.prod.js
docker/: ToggleGitTracking.ps1  build_tools.py  entrypoint.sh
docs/: linein_streaming.md  voice_assistant.md
main/: CMakeLists.txt  Kconfig.projbuild  esp_app_main.c  linker.lf
partition_table/: partitionTable.csv
plugin/: repo.xml
server_certs/: github.pem  githubusercontent-com.pem  s3-amazon-com.pem
(+49 files in other folders)
